--- a/package.json
+++ b/package.json
@@ -5,17 +5,70 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@angular-eslint/schematics": "^14.1.2",
+    "@angular/animations": "~14.2.0",
+    "@angular/cdk": "^14.2.2",
+    "@angular/common": "~14.2.0",
+    "@angular/compiler": "~14.2.0",
+    "@angular/core": "~14.2.0",
+    "@angular/forms": "~14.2.0",
+    "@angular/material": "^14.2.2",
+    "@angular/platform-browser": "~14.2.0",
+    "@angular/platform-browser-dynamic": "~14.2.0",
+    "@angular/router": "~14.2.0",
+    "@nrwl/angular": "14.7.16",
+    "ngx-pagination": "^6.0.2",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
+  },
   "devDependencies": {
-    "@nrwl/cli": "13.10.6",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "13.10.6",
+    "@angular-devkit/build-angular": "~14.2.0",
+    "@angular-eslint/eslint-plugin": "~14.0.4",
+    "@angular-eslint/eslint-plugin-template": "~14.0.4",
+    "@angular-eslint/template-parser": "~14.0.4",
+    "@angular/cli": "~14.2.0",
+    "@angular/compiler-cli": "~14.2.0",
+    "@angular/language-service": "~14.2.0",
+    "@babel/preset-typescript": "^7.18.6",
+    "@nrwl/cli": "14.7.16",
+    "@nrwl/cypress": "14.7.16",
+    "@nrwl/eslint-plugin-nx": "^14.7.16",
+    "@nrwl/jest": "14.7.16",
+    "@nrwl/nx-cloud": "14.6.2",
+    "@nrwl/workspace": "14.7.16",
+    "@testing-library/angular": "^12.1.2",
+    "@testing-library/dom": "^8.18.1",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jasmine": "~4.0.0",
+    "@types/jest": "^28.1.8",
     "@types/node": "16.11.7",
-    "nx": "13.10.6",
-    "prettier": "^2.5.1",
-    "typescript": "~4.6.2"
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "cypress": "^10.7.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.6",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jasmine-core": "~4.2.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "jest": "^28.1.3",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "nx": "14.7.16",
+    "prettier": "^2.6.2",
+    "ts-jest": "^28.0.8",
+    "ts-mockito": "^2.6.1",
+    "typescript": "4.7.4"
   }
 }
